2024-10-30 Se crea version completa gráficas de Reporte de Pesadas.

--- a/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Analisis.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Analisis.cshtml
@@ -21,17 +21,69 @@
         }
 
         .info-card {
-            border: 1px solid #dcdcdc;
-            border-radius: 8px;
+            background-color: #f8f9fa; /* Color de fondo claro */
+            border-left: 5px solid #009ff5; /* Borde a la izquierda con el color de la empresa */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
             padding: 15px;
             margin-bottom: 15px;
-            background-color: #f9f9f9;
+            border-radius: 5px;
+            transition: transform 0.2s ease-in-out;
         }
 
-            .info-card h3 {
-                margin: 0;
-                font-size: 1.2rem;
+            .info-card:hover {
+                transform: translateY(-5px); /* Efecto de elevación al pasar el cursor */
             }
+
+            .info-card h3 {
+                font-size: 1.2rem;
+                color: #333; /* Color del texto */
+                margin: 0;
+            }
+
+        .info-icon {
+            color: #009ff5;
+            font-size: 1.5rem;
+            margin-right: 10px;
+        }
+
+        .info-card-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+
+            .info-card-container .col-md-3 {
+                flex: 0 0 calc(25% - 15px);
+            }
+
+        .titulo-card {
+            color: #009ff5;
+            font-size: 20px;
+        }
+
+        .cliente-info-card {
+            flex: 0 0 40%; /* Ajusta el ancho de la tarjeta para cliente */
+        }
+
+        .recorta-text {
+            white-space: nowrap; /* Evita que el texto haga un salto de línea */
+            overflow: hidden; /* Oculta el texto que sobrepasa el ancho */
+            text-overflow: ellipsis; /* Añade "..." al final del texto si es muy largo */
+            width: 100%; /* Asegura que el ancho de la tarjeta se aplique */
+            display: block; /* Asegura que el comportamiento se aplique como bloque */
+        }
+
+        .card-advertencia {
+            background-color: #f8d7da; /* Color rojo claro */
+            border: 1px solid #f5c6cb;
+            color: #721c24;
+        }
+
+        @@media (max-width: 768px) {
+            .info-card-container .col-md-3 {
+                flex: 0 0 100%;
+            }
+        }
     </style>
 }
 
@@ -55,47 +107,79 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <div class="row">
+
+                        <div class="info-card-container">
                             <div class="col-md-3">
                                 <div class="info-card">
-                                    <h3>Número de Material: @Model.Material</h3>
+                                    <i class="fas fa-cube info-icon"></i>
+                                    <span class="titulo-card">Número de Material</span>
+                                    <h3>@Model.Material</h3>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="info-card">
-                                    <h3>Total de Registros: @Model.TotalRegistros</h3>
+                                    <i class="fas fa-list-ol info-icon"></i>
+                                    <span class="titulo-card">Total de Registros</span>
+                                    <h3>@Model.TotalRegistros</h3>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="info-card">
-                                    <h3>Planta: @Model.NombrePlanta</h3>
+                                    <i class="fas fa-industry info-icon"></i>
+                                    <span class="titulo-card">Planta</span>
+                                    <h3 class="recorta-text">@Model.NombrePlanta</h3>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="info-card">
-                                    <h3>Cliente: @Model.Cliente</h3>
+                                    <i class="fas fa-user info-icon"></i>
+                                    <span class="titulo-card">Cliente</span>
+                                    <h3 class="recorta-text">@Model.Cliente</h3>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="info-card">
-                                    <h3>Peso Neto SAP: @Model.PesoNetoSAP kg</h3>
+                                    <i class="fas fa-weight info-icon"></i>
+                                    <span class="titulo-card">Peso Neto SAP</span>
+                                    <h3>@Model.PesoNetoSAP.ToString("F3") kg</h3>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="info-card">
-                                    <h3>Fecha Inicial: @Model.FechaInicial</h3>
+                                    <i class="fas fa-calendar-day info-icon"></i>
+                                    <span class="titulo-card">Fecha Inicial</span>
+                                    <h3>@Model.FechaInicial</h3>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="info-card">
-                                    <h3>Fecha Final: @Model.FechaFinal</h3>
-                                </div>
-                            </div> 
-                            <div class="col-md-3">
-                                <div class="info-card">
-                                    <h3>Desviación Estandar: @Model.DesviacionEstandar.ToString("F3")</h3>
+                                    <i class="fas fa-calendar-day info-icon"></i>
+                                    <span class="titulo-card">Fecha Final</span>
+                                    <h3>@Model.FechaFinal</h3>
                                 </div>
                             </div>
+                            <div class="col-md-3">
+                                <div class="info-card">
+                                    <i class="fas fa-arrow-down info-icon"></i>
+                                    <span class="titulo-card">Mínimo</span>
+                                    <h3>@Model.Minimo.ToString("F3")</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="info-card">
+                                    <i class="fas fa-arrow-up info-icon"></i>
+                                    <span class="titulo-card">Máximo</span>
+                                    <h3>@Model.Maximo.ToString("F3")</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="info-card">
+                                    <i class="fas fa-up-right-and-down-left-from-center info-icon"></i>
+                                    <span class="titulo-card">Tamaño</span>
+                                    <h3>@Model.Tamanio</h3>
+                                </div>
+                            </div>
+                        
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
@@ -161,6 +245,73 @@
                                     <div id="chartContainer">
                                         <canvas id="histogramaPesoReal" width="800" height="300"></canvas>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr />
+                        <h2>Sin valores atípicos</h2>
+                        <div class="info-card-container">
+                            <div class="col-md-2">
+                                <div class="info-card">
+                                    <i class="fas fa-weight info-icon"></i>
+                                    <span class="titulo-card">Peso Neto SAP</span>
+                                    <h3>@Model.PesoNetoSAP.ToString("F3") kg</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="info-card">
+                                    <i class="fas fa-chart-line info-icon"></i>
+                                    <span class="titulo-card">Desviación Estándar</span>
+                                    <h3>@Model.DesviacionEstandar.ToString("F3")</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="info-card">
+                                    <i class="fas fa-chart-bar info-icon"></i>
+                                    <span class="titulo-card">Media</span>
+                                    <h3>@Model.Media.ToString("F3")</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="info-card">
+                                    <i class="fas fa-balance-scale info-icon"></i>
+                                    <span class="titulo-card">Mediana</span>
+                                    <h3>@Model.Mediana.ToString("F3")</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="info-card">
+                                    <i class="fa-solid fa-list-ol info-icon"></i>
+                                    <span class="titulo-card">Total Piezas</span>
+                                    <h3>@Model.TotalPiezasSinAtipicos</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="info-card">
+                                    <i class="fa-solid fa-calculator info-icon"></i>
+                                    <span class="titulo-card">Piezas por diferencia</span>
+                                    <h3>@Model.TotalPiezasSinAtipicosXdiferencia.ToString("F3") kg</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="info-card">
+                                    <i class="fas fa-percent info-icon"></i>
+                                    <span class="titulo-card">Tolerancia</span>
+                                    <h3>@Model.PorcentajeTolerancia</h3>
+                                </div>
+                            </div>   
+                            <div class="col-md-2">
+                                <div class="info-card">
+                                    <i class="fas fa-percent info-icon"></i>
+                                    <span class="titulo-card"> Diferencia</span>
+                                    <h3>@((Model.PromedioPorcentajeDiferencia).ToString("F2")) %</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="info-card @(Model.AdvertenciaCambioPeso ? "card-advertencia" : "")">
+                                    <i class="fas fa-flag info-icon"></i>
+                                    <span class="titulo-card">Cambio</span>
+                                    <h3 style="@(Model.AdvertenciaCambioPeso ? "color : red;" : string.Empty)" >@(Model.AdvertenciaCambioPeso ? "Ajustar" : "No necesario")</h3>
                                 </div>
                             </div>
                         </div>
@@ -550,7 +701,7 @@
                 }
             });
 
-            //***** GRAFICA de valores atipos en pesos reales *********          
+            //***** GRAFICA de valores atipos en pesos reales *********
             // Separar los valores atípicos y no atípicos para resaltar los outliers
             var backgroundColors = esAtipico.map(isOutlier => isOutlier ? 'rgba(255, 99, 132, 0.8)' : 'rgba(54, 162, 235, 0.8)');
             var borderColors = esAtipico.map(isOutlier => isOutlier ? 'rgba(255, 99, 132, 1)' : 'rgba(54, 162, 235, 1)');
