--- a/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Index.cshtml
@@ -107,29 +107,31 @@
                                             <thead>
                                                 <tr>
                                                     <th>Análisis</th>
+                                                    <th style="background-color: green">Peso Vigente</th>
+                                                    <th style="background-color: green">@Html.DisplayNameFor(model => model.tamano_pieza)</th>
+                                                    <th style="background-color: green">@Html.DisplayNameFor(model => model.porcentaje_tolerancia)</th>
+                                                    <th style="background-color: green">@Html.DisplayNameFor(model => model.PromedioPorcentajeDiferencia)</th>
+                                                    <th style="background-color: green">@Html.DisplayNameFor(model => model.AdvertenciaCambioPeso)</th>
                                                     <th>@Html.DisplayNameFor(model => model.SAP_Platina)</th>
                                                     <th>@Html.DisplayNameFor(model => model.SAP_Rollo)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.tamano_pieza)</th>
                                                     <th>@Html.DisplayNameFor(model => model.Cliente)</th>
                                                     <th>@Html.DisplayNameFor(model => model.Type_of_Metal)</th>
                                                     <th>@Html.DisplayNameFor(model => model.Peso_Neto_SAP)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.Peso_Neto__mean_)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.Peso_Neto_stdev)</th>
+                                                    @*<th>@Html.DisplayNameFor(model => model.Peso_Neto__mean_)</th>*@
+                                                    @*<th>@Html.DisplayNameFor(model => model.Peso_Neto_stdev)</th>*@
                                                     <th>@Html.DisplayNameFor(model => model.count)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.Diferencia_Peso_Neto)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.porcentaje_tolerancia)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.porcentaje_diferencia_total)</th>
+                                                    @*<th>@Html.DisplayNameFor(model => model.Diferencia_Peso_Neto)</th>*@
+                                                    @*<th>@Html.DisplayNameFor(model => model.porcentaje_diferencia_total)</th>*@
                                                     <th>@Html.DisplayNameFor(model => model.Thickness)</th>
                                                     <th>@Html.DisplayNameFor(model => model.Width)</th>
                                                     <th>@Html.DisplayNameFor(model => model.Advance)</th>
                                                     <th>@Html.DisplayNameFor(model => model.peso_teorico_acero)</th>
                                                     <th>@Html.DisplayNameFor(model => model.Peso_Bruto_SAP)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.Peso_Bruto__mean_)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.diferencia_peso_bruto_mean)</th>
-                                                    <th>@Html.DisplayNameFor(model => model.diferencia_peso_bruto_sap_teorico)</th>
+                                                    @*<th>@Html.DisplayNameFor(model => model.Peso_Bruto__mean_)</th>*@
+                                                    @*<th>@Html.DisplayNameFor(model => model.diferencia_peso_bruto_mean)</th>
+        <th>@Html.DisplayNameFor(model => model.diferencia_peso_bruto_sap_teorico)</th>*@
                                                     <th>@Html.DisplayNameFor(model => model.Total_de_piezas)</th>
                                                     <th>@Html.DisplayNameFor(model => model.Peso_Etiqueta)</th>
-                                                    <th>Peso Vigente</th>
                                                     <th style="background-color: green">@Html.DisplayNameFor(model => model.fecha_inicio_validez_peso_bom)</th>
                                                     <th style="background-color: green">@Html.DisplayNameFor(model => model.fecha_fin_validez_peso_bom)</th>
                                                 </tr>
@@ -137,37 +139,48 @@
                                             <tbody>
                                                 @foreach (var item in Model)
                                                 {
+
                                                     <tr>
-                                                        <td>
-                                                            <a href="@Url.Action("Analisis", "ReportePesadas", new { id_planta = Request.Params["id_planta"], cliente = item.Cliente, fecha_inicial = Request.Params["fecha_inicial"], fecha_final = Request.Params["fecha_final"], numero_sap = item.SAP_Platina, fecha_inicio_validez = item.fecha_inicio_validez_peso_bom.ToString("yyyy-MM-dd HH:mm"), fecha_fin_validez = item.fecha_fin_validez_peso_bom.ToString("yyyy-MM-dd HH:mm") })" class="btn btn-primary btn-sm">Análisis</a>
+                                                        @{ string background = (!(item.fecha_inicio_validez_peso_bom <= DateTime.Now && item.fecha_fin_validez_peso_bom >= DateTime.Now) ? "#DCDDDC" : item.AdvertenciaCambioPeso && item.count < 5 ? "#FCFFB4" : item.AdvertenciaCambioPeso ? "#FFAAAA" : "#C8FDBE"); }
+
+                                                        <td style="background-color: @(background)">
+                                                            <a href="@Url.Action("Analisis", "ReportePesadas", new { id_planta = Request.Params["id_planta"], cliente = item.Cliente, fecha_inicial = Request.Params["fecha_inicial"], fecha_final = Request.Params["fecha_final"], numero_sap = item.SAP_Platina, fecha_inicio_validez = item.fecha_inicio_validez_peso_bom.ToString("yyyy-MM-dd HH:mm"), fecha_fin_validez = item.fecha_fin_validez_peso_bom.ToString("yyyy-MM-dd HH:mm") })"
+                                                               class="btn @(!(item.fecha_inicio_validez_peso_bom <= DateTime.Now && item.fecha_fin_validez_peso_bom >= DateTime.Now) ? "btn-secondary" : item.AdvertenciaCambioPeso && item.count < 5  ? "btn-warning" : item.AdvertenciaCambioPeso ? "btn-danger":"btn-success") btn-sm">Análisis</a>
+                                                        </td>
+                                                        <td style="background-color: @background">@(item.fecha_inicio_validez_peso_bom <= DateTime.Now && item.fecha_fin_validez_peso_bom >= DateTime.Now ? "Sí" : "No")</td>
+                                                        <td style="background-color: @background">@Html.DisplayFor(modelItem => item.tamano_pieza)</td>
+                                                        <td style="background-color: @background">@Html.DisplayFor(modelItem => item.porcentaje_tolerancia)</td>
+
+                                                        <td style="background-color: @background">
+                                                            @String.Format("{0:F2}", item.PromedioPorcentajeDiferencia) %
+                                                        </td>
+                                                        <td style="background-color: @background">
+                                                            @(!(item.fecha_inicio_validez_peso_bom <= DateTime.Now && item.fecha_fin_validez_peso_bom >= DateTime.Now) ? "Peso No Vigente" : item.AdvertenciaCambioPeso && item.count < 5  ? "Pocos Datos" : item.AdvertenciaCambioPeso ? "Ajustar":"No necesario")
                                                         </td>
                                                         <td>@Html.DisplayFor(modelItem => item.SAP_Platina)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.SAP_Rollo)</td>
-                                                        <td>@Html.DisplayFor(modelItem => item.tamano_pieza)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.Cliente)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.Type_of_Metal)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.Peso_Neto_SAP)</td>
-                                                        <td>@Html.DisplayFor(modelItem => item.Peso_Neto__mean_)</td>
-                                                        <td>@Html.DisplayFor(modelItem => item.Peso_Neto_stdev)</td>
+                                                        @*<td>@Html.DisplayFor(modelItem => item.Peso_Neto__mean_)</td>
+        <td>@Html.DisplayFor(modelItem => item.Peso_Neto_stdev)</td>*@
                                                         <td>@Html.DisplayFor(modelItem => item.count)</td>
-                                                        <td><b>@Html.DisplayFor(modelItem => item.Diferencia_Peso_Neto)</b></td>
-                                                        <td>@Html.DisplayFor(modelItem => item.porcentaje_tolerancia)</td>
-                                                        <td>@Html.DisplayFor(modelItem => item.porcentaje_diferencia_total)</td>
+                                                        @*<td><b>@Html.DisplayFor(modelItem => item.Diferencia_Peso_Neto)</b></td>*@
+                                                        @*<td>@Html.DisplayFor(modelItem => item.porcentaje_diferencia_total)</td>*@
                                                         <td>@Html.DisplayFor(modelItem => item.Thickness)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.Width)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.Advance)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.peso_teorico_acero)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.Peso_Bruto_SAP)</td>
-                                                        <td>@Html.DisplayFor(modelItem => item.Peso_Bruto__mean_)</td>
-                                                        <td><b>@Html.DisplayFor(modelItem => item.diferencia_peso_bruto_mean)</b></td>
-                                                        <td>@Html.DisplayFor(modelItem => item.diferencia_peso_bruto_sap_teorico)</td>
+                                                        @*<td>@Html.DisplayFor(modelItem => item.Peso_Bruto__mean_)</td>
+        <td><b>@Html.DisplayFor(modelItem => item.diferencia_peso_bruto_mean)</b></td>
+        <td>@Html.DisplayFor(modelItem => item.diferencia_peso_bruto_sap_teorico)</td>*@
                                                         <td>@Html.DisplayFor(modelItem => item.Total_de_piezas)</td>
                                                         <td>@Html.DisplayFor(modelItem => item.Peso_Etiqueta)</td>
-                                                        <td>@(item.fecha_inicio_validez_peso_bom <= DateTime.Now && item.fecha_fin_validez_peso_bom >= DateTime.Now ? "Sí" : "No")</td>
-                                                        <td style="@(item.muestra_dentro_rango.HasValue && item.muestra_dentro_rango.Value ? "background-color: #AAFFAA":"background-color: #FFAAAA")">
+                                                        <td style="@(!item.AdvertenciaCambioPeso ? "background-color: #AAFFAA":"background-color: #FFAAAA")">
                                                             @Html.DisplayFor(modelItem => item.fecha_inicio_validez_peso_bom)
                                                         </td>
-                                                        <td style="@(item.muestra_dentro_rango.HasValue && item.muestra_dentro_rango.Value ? "background-color: #AAFFAA":"background-color: #FFAAAA")">
+                                                        <td style="@(!item.AdvertenciaCambioPeso ? "background-color: #AAFFAA":"background-color: #FFAAAA")">
                                                             @Html.DisplayFor(modelItem => item.fecha_fin_validez_peso_bom)
                                                         </td>
 
